--- a/.gitignore
+++ b/.gitignore
@@ -108,6 +108,8 @@ ipython_config.py
 #   commonly ignored for libraries.
 #   https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
 #poetry.lock
+config.txt
+
 
 # PEP 582; used by e.g. github.com/David-OConnor/pyflow
 __pypackages__/
